tests/ui/parser/raw-string-suffix-invalid.stderr
error: suffixes on string literals are invalid
  --> $DIR/raw-string-suffix-invalid.rs:5:13
   |
LL |     let s = r#" \ "#r"\ ";
   |             ^^^^^^^^^^ invalid suffix `r`

error: aborting due to 1 previous error

